== 1.8.0

    Bugfixes:
    ----------------------------
    + PHP8 compatibility fixes;
    + Fixed passkeys upgrade queries;
    + MySQL no active transaction error during upgrades (#4319);
    + $config['disable_main_login_form'] shows blank page (#4317);
    + Unable to clear custom fields (#4313);

    Enhancements, changes:
    ----------------------------
    + Added Isle of Man postcodes (#4318);

== 1.7.0

    New features:
    ------------
    + Full php8.3 compatibility;
    + Added support for passkeys / passwordless logins;
    + API:
        + Added API changelog;

    Bugfixes:
    ----------------------------
    + Fixed Use UTF-16LE encoding for XLS sheet names, and UTF-8 as input encoding (#3977);
    + Fixed Update login_form.php for installation inside subdir (#3954);
    + Fixed php8 constructor fix for radius class (#3985);
    + Fixed Force mac address update during status update scan (#3791);
    + Fixed RADIUS authentication fails on 1.6.0 (#3986);
    + Fixed cannot add NAT issue (#3993);
    + Fixed Various Linked Addresses issues (#3275, #4188, #4189, #3274);
    + Fixed Duplicates tool not finding ALL duplicates (#4161);
    + Fixes fetch_favourite_subnets function returns empty array instead of false (#4182);
    + Fixed Dashboard widget widths are not correct percentage (#4176);
    + Fixed remove_offline_addresses.php can't execute (#4173);
    + Fixed Searches do not properly organize results (#3917)
    + Fixed Expand/compress all folders not working properly (#3583);
    + Fixed Bug when adding a user to a group (#4137);
    + Fixed Password validation errors (#4099,#2423);
    + Fixed Ripe import results in jQuery error (#4007);
    + Fixed Ripe import crashes if too many subnets are found (#4180);
    + Fixed Devices with height 0 crash Rack image generation (#4193);
    + Fixed Custom field not working in Routing module (#4174);
    + Fixed Circuit Type showing differently in two windows (#4104);