@@ -7,6 +7,7 @@
     + MySQL no active transaction error during upgrades (#4319);
     + $config['disable_main_login_form'] shows blank page (#4317);
     + Unable to clear custom fields (#4313);
+    + Modified the text shortening of subnet descriptions (#4279, #4280);
 
     Enhancements, changes:
     ----------------------------
